--- a/templates/base.html
+++ b/templates/base.html
@@ -152,8 +152,8 @@
                     <h3 class="text-white font-semibold mb-4">Support</h3>
                     <ul class="space-y-2">
                         <li><a href="#" class="hover:text-emerald-400 transition-colors duration-200">Help Center</a></li>
-                        <li><a href="#" class="hover:text-emerald-400 transition-colors duration-200">Privacy Policy</a></li>
-                        <li><a href="#" class="hover:text-emerald-400 transition-colors duration-200">Terms of Service</a></li>
+                        <li><a href="{% url 'core:privacy_policy' %}" class="hover:text-emerald-400 transition-colors duration-200">Privacy Policy</a></li>
+                        <li><a href="{% url 'core:terms_conditions' %}" class="hover:text-emerald-400 transition-colors duration-200">Terms of Service</a></li>
                         <li><a href="#" class="hover:text-emerald-400 transition-colors duration-200">FAQ</a></li>
                     </ul>
                 </div>
