--- a/templates/users/attendance_statistics.html
+++ b/templates/users/attendance_statistics.html
@@ -1,5 +1,6 @@
 {% extends "dashboard/base.html" %}
 {% load static %}
+{% load mathfilters %}
 
 {% block title %}Attendance Statistics - GymBuddy{% endblock %}
 {% block page_title %}Attendance Statistics{% endblock %}
