--- a/templates/users/trainer_mark_attendance.html
+++ b/templates/users/trainer_mark_attendance.html
@@ -13,7 +13,13 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
             <div>
-                <p class="text-sm font-medium text-blue-900">Mark attendance for your assigned trainees</p>
+                <p class="text-sm font-medium text-blue-900">
+                    {% if is_staff %}
+                        Mark attendance for all trainees
+                    {% else %}
+                        Mark attendance for your assigned trainees
+                    {% endif %}
+                </p>
                 <p class="text-xs text-blue-700 mt-1">You can check in or check out trainees on their behalf</p>
             </div>
         </div>
